Initial release of FCD-PRG01 and FCD-CBL01

--- a/doc/datasheets/fcd-prg01/fcd-prg01.tex
+++ b/doc/datasheets/fcd-prg01/fcd-prg01.tex
@@ -83,19 +83,19 @@
 
 \section*{Product Description}
 \begin{multicols}{2}
-  The \PID\ is a USB bootstrap loader\footnote{``MSP430 Programming Via the Bootstrap Loader (\SLAUNOLINK)'' Application Note (\SLAUPDFURL)} (BSL) programmer for the Texas Instruments MSP430 microprocessor.  For designs where low cost or small form factor prohibit the integration of custom programming logic or a large JTAG header, the \PID\ enables in-system programming by including a single 6 pin header in the target device design.
+  The \PID\ is a USB bootstrap loader\footnote{``MSP430 Programming Via the Bootstrap Loader (\SLAUNOLINK)'' Application Note (\SLAUPDFURL)} (BSL) programmer for the Texas Instruments MSP430 microcontroller.  For designs where low cost or small form factor prohibit the integration of custom programming logic or a large JTAG header, the \PID\ enables in-system programming by including a single 6 pin header in the target device design.
 
   \begin{center}
     \includegraphics[width=3 in]{fcd-prg01-diag}
   \end{center}
 
-  Originally designed to work with the cross platform \tosurl\ toolchain, the \PID\ provides an open source, cross platform alternative to platform dependent development tools for the MSP430 microprocessor.
+  Originally designed to work with the cross platform \tosurl\ toolchain, the \PID\ provides an open source, cross platform alternative to platform dependent development tools for the MSP430 microcontroller.
 
   \begin{center}
     \includegraphics[width=2 in]{fcd-prg01}
   \end{center}
 
-  The \PID\ integrates a USB-to-serial converter and on board regulated power supply into a small USB dongle, allowing programming and test capability over a single interface.  It exposes a standard 6 pin, 0.1" header which can be used to interface to the target board via a device specific cable harness.  This modular aproach provides designers with the flexibility to select the optimal physical programming interface for the unique design constraints of each target platform.
+  The \PID\ integrates a USB-to-serial converter and on board regulated power supply into a small USB dongle, allowing programming and test capability over a single interface.  It exposes a standard 6 pin, 0.1" header which can be used to interface to the target board via a device specific cable harness.  This modular approach provides designers with the flexibility to select the optimal physical programming interface for the unique design constraints of each target platform.
 
 \end{multicols}
 
