Update FCD-PRG01 datasheet to Rev F

--- a/docs/datasheets/fcd-prg01/fcd-prg01.tex
+++ b/docs/datasheets/fcd-prg01/fcd-prg01.tex
@@ -42,10 +42,11 @@
 \newcommand{\SLAUZIPURL}{\href{http://www.ti.com/lit/zip/slau319}{http://www.ti.com/lit/zip/slau319}}
 \newcommand{\githuburl}{\href{http://github.com/FlyingCampDesign}{https://github.com/FlyingCampDesign}}
 \newcommand{\fcdbslutility}{\href{http://www.flyingcampdesign.com/msp430-bsl-utility.html}{http://www.flyingcampdesign.com/msp430-bsl-utility.html}}
+\newcommand{\githuburleagle}{\href{http://github.com/FlyingCampDesign/eagle}{http://github.com/FlyingCampDesign/eagle}}
 
 \pagestyle{fancy}
 \lfoot{\fcdurl}
-\cfoot{\PIDNOLINK\ Datasheet -- Rev. E}
+\cfoot{\PIDNOLINK\ Datasheet -- Rev. F}
 
 \usepackage[pdftex,
             colorlinks=true,
@@ -215,7 +216,7 @@
     \end{center}
   \end{figure}
 
-  A Cadsoft Eagle CAD library which contains land pattern footprints for these headers is available for download on the \PID\ product page: \PIDURL \newline
+  A Cadsoft Eagle CAD library which contains land pattern footprints for these headers is available for download on the \PID\ product page: \githuburleagle \newline
 
 \subsection*{Custom Programming Cables}
   For those customers wishing to design their own custom programming cables, \fcd\ recommends the following mating connector for use with the 6 pin BSL programming interface:
@@ -333,6 +334,8 @@ Contact \fcdsupportemail\ or visit \fcdsupporturl
   \hline
   E & 02/09/2013 & - Update MSP430 Device Support page regarding MSP430F543xA SYS10 BSL fix  \newline %
                    - Fix revision-hard-coded link to a TI errata sheet \\
+  \hline
+  F & 02/11/2013 & - Update FCD-CBL01 mating connector CAD symbol library URL \\
   \hline
 \end{tabularx}
 
